--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,15 @@ name: generate animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 */12 * * *" 
   
   workflow_dispatch:
   
   push:
     branches:
-      - main
+    - main
+    
+  
 
 jobs:
   generate:
@@ -16,26 +18,18 @@ jobs:
     timeout-minutes: 10
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Generate github-contribution-grid-snake.svg
-        uses: Platane/snk@v0.18.0
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v2
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          dark_mode: true
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push github-contribution-grid-snake.svg to the output branch
-        uses: actions/upload-artifact@v2
-        with:
-          name: SVG Files
-          path: dist/
-      
-      - name: Deploy to GitHub Pages
+      - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          build_dir: dist
           target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
