--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,6 @@
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
 name: generate animation
+
 
 on:
   # run automatically every 24 hours
@@ -13,8 +15,6 @@ on:
     branches:
     - main
     
-  
-
 jobs:
   generate:
     runs-on: ubuntu-latest
